[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/common/screens/number_game_screen.gd" id="1"]

[node name="NumberGameHandheld" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Layout" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 24.0
margin_right = -32.0
margin_bottom = -40.0

[node name="VBox" type="VBoxContainer" parent="Layout"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
alignment = 1
custom_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Layout/VBox"]
unique_name_in_owner = true
text = "数字规律闯关"
vertical_alignment = 1
horizontal_alignment = 1
theme_type_variation = "HeaderMedium"
size_flags_horizontal = 3

[node name="SubtitleLabel" type="Label" parent="Layout/VBox"]
unique_name_in_owner = true
text = "简单 · 根据数列规律填空"
modulate = Color(0.4, 0.4, 0.4, 1)
vertical_alignment = 1
horizontal_alignment = 1
size_flags_horizontal = 3
autowrap_mode = 2

[node name="SequenceLabel" type="Label" parent="Layout/VBox"]
unique_name_in_owner = true
text = "1 , 2 , 3 , ( ? )"
vertical_alignment = 1
horizontal_alignment = 1
clip_text = true
max_lines_visible = 3
size_flags_horizontal = 3
autowrap_mode = 2

[node name="HintLabel" type="Label" parent="Layout/VBox"]
unique_name_in_owner = true
text = "题型 L1-1 · 填写 ?"
modulate = Color(0.35, 0.35, 0.35, 1)
horizontal_alignment = 1
size_flags_horizontal = 3
autowrap_mode = 2

[node name="OptionsWrapper" type="CenterContainer" parent="Layout/VBox"]
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Options" type="GridContainer" parent="Layout/VBox/OptionsWrapper"]
columns = 2
custom_constants/h_separation = 12
custom_constants/v_separation = 10
size_flags_horizontal = 3

[node name="Option1" type="Button" parent="Layout/VBox/OptionsWrapper/Options"]
unique_name_in_owner = true
text = "12"
size_flags_horizontal = 3
size_flags_vertical = 1
custom_minimum_size = Vector2(0, 48)

[node name="Option2" type="Button" parent="Layout/VBox/OptionsWrapper/Options"]
unique_name_in_owner = true
text = "13"
size_flags_horizontal = 3
size_flags_vertical = 1
custom_minimum_size = Vector2(0, 48)

[node name="Option3" type="Button" parent="Layout/VBox/OptionsWrapper/Options"]
unique_name_in_owner = true
text = "14"
size_flags_horizontal = 3
size_flags_vertical = 1
custom_minimum_size = Vector2(0, 48)

[node name="Option4" type="Button" parent="Layout/VBox/OptionsWrapper/Options"]
unique_name_in_owner = true
text = "15"
size_flags_horizontal = 3
size_flags_vertical = 1
custom_minimum_size = Vector2(0, 48)

[node name="FeedbackLabel" type="Label" parent="Layout/VBox"]
unique_name_in_owner = true
text = "请选择正确的数字"
vertical_alignment = 1
horizontal_alignment = 1
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="Layout/VBox"]
size_flags_horizontal = 3
alignment = 1
custom_constants/separation = 10

[node name="BackButton" type="Button" parent="Layout/VBox/Buttons"]
unique_name_in_owner = true
text = "返回菜单"
size_flags_horizontal = 1

[node name="SettingsButton" type="Button" parent="Layout/VBox/Buttons"]
unique_name_in_owner = true
text = "设置"
size_flags_horizontal = 1

[node name="RefreshButton" type="Button" parent="Layout/VBox/Buttons"]
unique_name_in_owner = true
text = "换一题"
size_flags_horizontal = 1

[node name="NextButton" type="Button" parent="Layout/VBox/Buttons"]
unique_name_in_owner = true
text = "下一题"
size_flags_horizontal = 1
